--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "race",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https:/https://NURSULTANCODER.github.io/race",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
